@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class Skill {
    - name: String
}

class SkillRepository {
  - List<Skill> skills
  + boolean validateSkill(Skill skill)
  + boolean skillsDoNotContain(Skill skill)
  + Optional<Skill> add(Skill skill)
  + Optional<Skill> createSkill(String name)
  + List<Skill> getSkills()
  + Skill getSkillByName(String name)
  + boolean addSkill(Skill skill)
}

class Organization {
  - String name
  - String vatNumber
  - String address
  - String phone
  - String email
  + boolean equals(Object o)
}

class OrganizationRepository {
  + Optional<Organization> getOrganizationByHRM(HRM hrm)
  + Optional<Organization> getOrganizationByVFM(VFM vfm)
  + Optional<Organization> getOrganizationByHRMEmail(String email)
  + Optional<Organization> add(Organization organization)
  + boolean validateOrganization(Organization organization)
}

class Repositories {
  + getInstance() : Repositories
  + getSkillRepository() : SkillRepository
  + getOrganizationRepository() : OrganizationRepository
}

class CreateSkillController {
  + CreateSkillController(OrganizationRepository organizationRepository,
                                   SkillRepository skillRepository,
                                   AuthenticationRepository authenticationRepository)
  + Optional<Skill> createSkill(String name)
}

class CreateSkillUI {
  + requestSkillName()
}

class HRM {
   - String name
   - int vatNumber
   - String email
   - int phonenumber
}

note right of CreateSkillController
  - Skill name is obtained from the HRM's input
  - Updates the Skill Repository
end note

note right of HRM
  - HRM initiates skill creation
end note

note left of CreateSkillUI
  - UI for HRM to input and confirm skill name
  - Communicates with CreateSkillController
end note

note left of Organization
  - Manages skills
  - Handles organizational details
end note

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

CreateSkillUI .> CreateSkillController

CreateSkillController -down-> Repositories : retrieves instances

Repositories -down-> SkillRepository : accesses
Repositories -down-> OrganizationRepository : accesses

CreateSkillController ..> OrganizationRepository : organizationRepository

OrganizationRepository --> "*" Organization : persists
ApplicationSession --> "1" UserSession : userSession

CreateSkillController ..> "1" Organization : organization
CreateSkillController ..> ApplicationSession
CreateSkillController ..> UserSession
SkillRepository"1" --> "*" Skill : saves
Skill --> HRM : createdBy

Organization --> "*" HRM : employs

@enduml